# building_agentic_AI_project

./: .gitignore  README.md  pyproject.toml
code/: run.py
code/iac_agent/: __init__.py  app.py
code/iac_agent/agents/: __init__.py  factory.py  part1.py  part2.py  part3.py  prompts.py  workflow_state.py
code/iac_agent/core/: __init__.py  logger_configuration.py
code/iac_agent/week3/: factory.py  part1.py  part2.py  part3.py
code/perplexia_ai/: app.py
code/perplexia_ai/week3/: part1.py  prompts.py  workflow_state.py
